--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -131,7 +131,7 @@
     "def extract_variables(config_file):\n",
     "    with open(config_file, 'r') as file:\n",
     "        content = file.read()\n",
-    "    variable_pattern = re.compile(r'\\b(?:inline\\s+)?(?:G4double|G4ThreeVector|G4Material\\*|int|float|double|char\\*|std::string)\\s+(\\w+)\\s*=')\n",
+    "    variable_pattern = re.compile(r'\\b(?:inline\\s+)?(?:G4double|G4ThreeVector|G4Material\\*|int|float|double|char\\*|G4String)\\s+(\\w+)\\s*=')\n",
     "    variables = variable_pattern.findall(content)\n",
     "    return {var: f'g_{var}' for var in variables}\n",
     "\n",
